Animação ao Scroll

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -106,7 +106,10 @@ footer{
  
     padding: 40px;
 }
+.bg{
+    background-color: #141414;
 
+}
 .container{
     max-width: 1200px;
     margin-bottom: 70px;
@@ -150,7 +153,6 @@ margin-right: 20px;
     display: contents;
   }
   .relogios-discricao {
-    gap: 15px;
     padding: 5px;   
     margin-left: 25px;
 }
@@ -163,9 +165,26 @@ margin-right: 20px;
 
 .relogios-discricao section.ativo {
   display: block;
+  animation: show .5s forwards;
 }
 
-.bg{
-    background-color: #141414;
-
+@keyframes show{
+    from{
+        opacity: 0;
+        transform: translate3d(-30px, 0, 0);
+    }
+    to{
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
 }
+
+.js-scroll{
+    opacity: 0;
+    transform: translate(-30px 0, 0);
+}
+  .js-scroll.ativo{
+    opacity: 1;
+    transform: translate(0, 0, 0);
+    transition: .3s;
+  }
